--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "hyperlane-base",
     "hyperlane-core",
     "hyperlane-test",
+    "rust_challenge",
     "sealevel/client",
     "sealevel/libraries/access-control",
     "sealevel/libraries/account-utils",
