--- a/rust/rust_challenge/Cargo.toml
+++ b/rust/rust_challenge/Cargo.toml
@@ -12,7 +12,7 @@ version.workspace = true
 
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
-ethers = { version = "2.0.10", features = ["rustls", "ws"]}
+ethers = { version = "2.0.10", features = ["rustls"]}
 anyhow.workspace = true
 tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
 serde.workspace = true
